Improve vertical spacing issues on mobile

--- a/src/app/modules/app/components/app/app.component.less
+++ b/src/app/modules/app/components/app/app.component.less
@@ -12,6 +12,10 @@
     flex-direction: column;
 }
 
+.height-spacer {
+    min-height: 3rem;
+}
+
 .app-wrap {
     max-width: 1000px;
     width: 100%;
